todo: fix shaddow clipping gap

--- a/app/globals.css
+++ b/app/globals.css
@@ -39,36 +39,17 @@ body {
   box-sizing: border-box;
   background: #E1D5B4;
   padding: 5% 2% 1% 2%;
-  position:relative;
 
 }
 
-.paper-frame::after {
-  content: "";
-  position: absolute;
-
-  /* Instead of matching padding, match the actual inner-frame box */
-  top: calc(5%);   
-  left: calc(2%);
-  right: calc(2%);
-  bottom: calc(1%);
-
-  border-radius: 40px;
-  pointer-events: none;
-
-  box-shadow:
-    inset 0 0 25px rgba(0,0,0,0.25),
-    inset 0 4px 8px rgba(0,0,0,0.15);
-}
   
 
 .inner-frame {
   border-radius: 40px;
 
   height: 100%;
-  background: #E4D4A8;
+  background: #251f0c;
   overflow-y: auto;
   
-
   scrollbar-width: none;
 }
